--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.92"
+clap = { version = "4.5.20", features = ["derive", "string"] }
+env_logger = "0.11.5"
 evdev = "0.12.2"
+log = "0.4"
